# synpatick

./: .gitignore  README.md  dune-project
lib/: dune  graph.ml  graph.mli  hiding.ml  hiding.mli  name.ml  name.mli  parallel.ml  parallel.mli  parser.ml  parser.mli  prefix.ml  prefix.mli  restriction.ml  restriction.mli  set.ml  sum.ml  sum.mli  tts.ml  tts.mli  zero.ml  zero.mli
